# yolo_nas_cpp

./: .gitattributes  CMakeLists.txt  README.md
cmake/: yolo_nas_cppConfig.cmake.in
config/: yolo_nas_s-metadata.json
include/yolo_nas_cpp/: detection_data.hpp  enum_mapping.hpp  network.hpp  post_processing.hpp  pre_processing.hpp  utils.hpp
models/: LICENSE.md  yolo_nas_s.onnx
src/: network.cpp  post_processing.cpp  pre_processing.cpp  yolo_nas_cpp.cpp
tests/: post_processing.cpp  pre_processing.cpp
utils/: export_yolo_nas.py  install_super_gradients.sh  onnx_to_openvino_mo.py  yolo_nas_to_onnx.ipynb
